# VortX

./: .gitignore  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  README.md  ROADMAP.md  SECURITY.md  THIRD-PARTY-NOTICES.md  deny.toml
.github/: dependabot.yml  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/workflows/: android.yml  codeql.yml  desktop.yml  release-tvos.yml  security.yml
android/: build.gradle.kts  settings.gradle.kts
android/app/: build.gradle.kts
android/app/src/main/: AndroidManifest.xml
android/app/src/main/kotlin/com/stremiox/android/: MainActivity.kt
android/app/src/main/kotlin/com/stremiox/android/data/: CatalogRepository.kt
android/app/src/main/kotlin/com/stremiox/android/model/: Media.kt
android/app/src/main/kotlin/com/stremiox/android/ui/: StremioXApp.kt
android/app/src/main/kotlin/com/stremiox/android/ui/components/: Poster.kt
android/app/src/main/kotlin/com/stremiox/android/ui/screens/: DetailScreen.kt  HomeScreen.kt  OtherScreens.kt
android/app/src/main/kotlin/com/stremiox/android/ui/theme/: Theme.kt
android/app/src/main/res/values/: themes.xml
app/: project.yml
app/Resources/: Info-iOS.plist  Info-macOS.plist  Localizable.xcstrings
app/Resources/Assets.xcassets/AppIcon.appiconset/: Contents.json
app/Resources/shaders/: LICENSE.md
app/ResourcesTV/: Info-tvOS.plist
app/Sources/: ExternalPlayer.swift  NodeServer.swift  PlayerScreen.swift  ShareSheet.swift
app/Sources/Player/: AVPlayerEngine.swift  AVPlayerEngineView.swift  AudioOutputMode.swift  HDRDisplayMode.swift  HLSPlayerView.swift  MPVMetalPlayerView.swift  MPVMetalViewController.swift  MetalLayer.swift  PlayerEngine.swift  PlayerEngineRouter.swift  SkipSegments.swift  SkipTimestampService.swift  SubtitleStyle.swift  TrackPreferences.swift
app/SourcesShared/: Addon.swift  AddonStoreView.swift  AddonTerms.swift  AddonsView.swift  ApiKeys.swift  AppLanguage.swift  BackupCrypto.swift  Bip39Words.swift  CatalogPreferences.swift  ChipButtonStyle.swift  CollectionsHubModel.swift  CommunityTrickplay.swift  CoreBridge.swift  CoreModels.swift  CuratedCollections.swift  DebridKeys.swift  DebridResolver.swift  DownloadManager.swift  DownloadModels.swift  ERDBConfig.swift  HomeCollectionGroups.swift  Keychain.swift  LastStreamStore.swift  LinkAuthService.swift  LinkLoginView.swift  LinkResolver.swift  MacNodeServer.swift  MetadataKeysView.swift  PairingCrypto.swift  PlayedLinkLibrary.swift  Profiles.swift  ProfilesView.swift  RecoveryPhrase.swift  SavedLinksStore.swift  ScrubThumbnails.swift  SearchHistoryStore.swift  SeekBarStyle.swift  ServerConfigView.swift  SettingsBackup.swift  SourcePin.swift  (+22 more)
app/SourcesTV/: BrowseGridView.swift  CoreBridge.swift  DetailView.swift  DiscoverView.swift  ExternalPlayers.swift  HomeView.swift  LibraryView.swift  LinkLoginView.swift  LiveView.swift  LoginView.swift  OpenLinkView.swift  PlayerWindow.swift  ProfilesView.swift  RootTabView.swift  ScrubThumbnails.swift  SearchView.swift  SettingsView.swift  SharedUI.swift  StremioTVApp.swift  TVEpisodePanel.swift  TVInHeroTrailerView.swift  TVPlayerView.swift  Theme.swift
app/SourcesiOS/: FeaturedHeroModel.swift  FeaturedHeroView.swift  InHeroTrailerView.swift  PlatformModifiers.swift  StremioXiOSApp.swift  TrailerPlayer.swift  WhatsNewView.swift  YouTubeEmbedView.swift  iOSBrowseGridView.swift  iOSDetailView.swift  iOSLiveView.swift  iOSRootView.swift  iOSSettingsView.swift  iOSSignInView.swift
app/scripts/: fetch-node-macos.sh
core/: Cargo.toml
core/src/: model.rs
desktop/: .gitignore  index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts
desktop/scripts/: fetch-server-deps.sh
desktop/src/: detail.ts  engine.ts  icons.ts  main.ts  player.ts  server.ts  streamRanking.ts  styles.css
desktop/src-tauri/: Cargo.toml  tauri.conf.json  tauri.macos.conf.json  tauri.windows.conf.json
desktop/src-tauri/capabilities/: default.json
desktop/src-tauri/icons/: icon.icns
desktop/src-tauri/src/: engine.rs  lib.rs  main.rs  server.rs
docs/: DESIGN-SYSTEM.md  FEATURE-PARITY.md  LEGAL.md  PLAN.md  PLATFORM-ACQUISITION.md  REVIEW-WORKLIST.md
scripts/: build-core-xcframework.sh  fetch-server-deps.sh  make-logo.py
vortx-core/: Cargo.toml
vortx-core/crates/adapters/: Cargo.toml
vortx-core/crates/adapters/conformance/: nuvio_vectors.json
vortx-core/crates/adapters/src/: eclipse.rs  lib.rs  nuvio.rs
vortx-core/crates/adapters/tests/: adapter_properties.rs  conformance.rs
vortx-core/crates/debrid/src/: resolve.rs
vortx-core/crates/hive/src/: fact.rs  lib.rs
vortx-core/crates/ranking/src/: rank.rs
vortx-core/crates/state/src/: lib.rs  library.rs  profile.rs  store.rs
webapp/: .gitignore  README.md  index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts  wrangler.toml
webapp/public/: _headers  _redirects
webapp/src/: main.ts
webapp/src/lib/: account.ts  addon.ts  cardmenu.ts  dom.ts  icons.ts  mdblist.ts  player.ts  profiles.ts  router.ts  series.ts  settings.ts  store.ts  streamRanking.ts  types.ts  vault.ts
webapp/src/styles/: app.css
webapp/src/views/: addons.ts  board.ts  detail.ts  discover.ts  live.ts  login.ts  search.ts  settings.ts
