# VortX Core — the from-scratch streaming engine that replaces stremio-core.
#
# One Rust workspace, many compile targets (staticlib -> xcframework for iOS/tvOS/macOS,
# cdylib -> JNI for Android, rlib/wasm for desktop). Logic is written ONCE here; the Swift /
# Kotlin / TS layers are thin views that dispatch JSON actions and render JSON state.
#
# Built on the dedicated engine branch alongside the shipping app (stremio-core stays the
# default until VortX core reaches parity behind the engine selector). See the architecture:
# Brain wiki wiki/projects/stremiox/vortx-core-server.md.
[workspace]
resolver = "2"
members = [
    "crates/protocol",
    "crates/addons",
    "crates/hive",
    "crates/state",
    "crates/ranking",
    "crates/debrid",
    "crates/adapters",
]

[workspace.package]
version = "0.0.1"
edition = "2021"
license = "GPL-3.0-or-later"
publish = false

[workspace.dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
percent-encoding = "2"
thiserror = "1"
